@@ -10,8 +10,10 @@ anna (1.31) UNRELEASED; urgency=low
     their past contibutions.
   * Make sure components queued using anna-install always get installed, even
     when running in lowmem level 2. Closes: #476614.
+  * Use Choices-C for component selection templates. The advantage is that
+    preseeded values will show as selected (at the cost of a little memory).
 
- -- Frans Pop <fjp@debian.org>  Sat, 19 Apr 2008 00:00:12 +0200
+ -- Frans Pop <fjp@debian.org>  Sat, 19 Apr 2008 01:16:35 +0200
 
 anna (1.30) unstable; urgency=low
 
